add UpdateNote handler
