# internal/api/notes.go
@@ -7,6 +7,7 @@ import (
 	appErr "notes-api/pkg/error"
 	"notes-api/pkg/utils"
 
+	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/render"
 )
 
@@ -56,7 +57,59 @@ func (h *handler) CreateNote(w http.ResponseWriter, r *http.Request) {
 	render.JSON(w, r, resp.Set("success", note))
 }
 
-func (h *handler) UpdateNote(w http.ResponseWriter, r *http.Request) {}
+// UpdateNote
+// @Summary			Update Note.
+// @Description		Update existing Note.
+// @Tags			Notes
+// @Accept			json
+// @Produce			json
+// @Param 			note_id	path	string							true	"Note ID" example(01HQSH92SNYQVCBDSD38XNBRYM)
+// @Param 			note	body	entity.CreateUpdateNotePayload	true	"note data"
+// @Success			200		{object}	utils.Response
+// @Failure			400		{object}	utils.Response
+// @Failure			401		{object}	utils.Response
+// @Failure			422		{object}	utils.Response
+// @Failure			500		{object}	utils.Response
+// @Router	/notes/{note_id} [put]
+func (h *handler) UpdateNote(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+	resp := utils.NewResponse()
+
+	noteID := chi.URLParam(r, "note_id")
+	if noteID == "" {
+		render.Status(r, http.StatusNotFound)
+		render.JSON(w, r, resp.Set("note not found", nil))
+		return
+	}
+
+	payload := new(entity.CreateUpdateNotePayload)
+	err := json.NewDecoder(r.Body).Decode(payload)
+	if err != nil {
+		render.Status(r, http.StatusBadRequest)
+		render.JSON(w, r, resp.Set("invalid data", nil))
+		return
+	}
+
+	err = h.validate.Struct(payload)
+	if err != nil {
+		errs := utils.ParseValidatorErr(err)
+		render.Status(r, http.StatusBadRequest)
+		render.JSON(w, r, resp.Set("invalid data", nil).AddErrValidation(errs))
+		return
+	}
+
+	note, err := h.usecase.UpdateNote(ctx, noteID, payload)
+	if err != nil {
+		status, message := appErr.ErrStatusCode(err)
+
+		render.Status(r, status)
+		render.JSON(w, r, resp.Set(message, nil))
+		return
+	}
+
+	render.Status(r, http.StatusOK)
+	render.JSON(w, r, resp.Set("success", note))
+}
 
 func (h *handler) DeleteNote(w http.ResponseWriter, r *http.Request) {}
 
